--- a/frontend/src/components/admin/admin.html
+++ b/frontend/src/components/admin/admin.html
@@ -1,21 +1,45 @@
 
-<div class="container-fluid">
-    <div class="row">
 
-        <div class="col-xs-3 col-sm-3 col-md-2 sidebar" style="background-color: #333; color: #ded9d9; height: 100vh; position: fixed;">
-            <h2 ui-sref="admin" class="text-center" style="cursor: pointer;">Admin Portal</h2>
-            <ul class="nav nav-pills nav-stacked">
-                <li><a ui-sref="admin.carApprovals"> 🚗 Car approvals</a></li>
-                <li><a ui-sref="admin.userManagement">👨🏻‍💻 User management</a></li>
-                <li><a ui-sref="admin.analytics">📈 Product Analysis</a></li>
-                <li><a id="logout" ng-click="adminLogout()"> Logout</a></li>
+<body>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" ui-sref="admin">Admin Portal</a>
+
+
+            <ul class="nav navbar-nav navbar-right navbar-dropdown visible-xs">
+                <ul class="dropdown-menu navbar-dropdown visible-xs">
+                    <li><a ui-sref="admin.carApprovals">Car Approvals</a></li>
+                    <li><a ui-sref="admin.userManagement">User Management</a></li>
+                    <li><a ui-sref="admin.analytics">Product Analysis</a></li>
+                    <li><a id="logout" ng-click="adminLogout()">Logout</a></li>
+                </ul>
             </ul>
         </div>
 
+        <div class="collapse navbar-collapse" id="admin-navbar-collapse">
+            <ul class="nav navbar-nav navbar-right hidden-xs">
+                <li><a ui-sref="admin.carApprovals">Car Approvals</a></li>
+                <li><a ui-sref="admin.userManagement">User Management</a></li>
+                <li><a ui-sref="admin.analytics">Product Analysis</a></li>
+                <li><a id="logout" ng-click="adminLogout()">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-        <div class="col-xs-9 col-sm-9 col-md-10 col-md-offset-2 mainView" ui-view="adminContent" style="padding: 20px;">
-            <h1>Welcome to Admin Portal</h1>
+
+<div class="container" style="margin-top: 100px;">
+    <div ui-view="adminContent">
+        <div class="container-fluid text-center" style="height: 100vh; display: flex; justify-content: center; align-items: center;">
+            <div class="panel panel-default" style="width: 100%; max-width: 600px;">
+                <div class="panel-body">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTitq0VjZohQc5M6waBZwEyfzqDmQBZBOx51w&s" class="img-responsive center-block" alt="Welcome Image">
+                    <h1 class="text-primary">Welcome to the Admin Portal</h1>
+                    <p class="text-muted">Manage your application efficiently and effectively. Use the navigation menu to access different sections of the portal.</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
+</body>
