--- a/frontend/src/components/admin/carApprovals/carApprovals.html
+++ b/frontend/src/components/admin/carApprovals/carApprovals.html
@@ -1,22 +1,25 @@
-<div class="container px-2" style="width: 1000px; padding-left:100px; padding-right: 150px;" ng-init="init()">
-    <h2 class="text-center" ng-if="cars.length === 0">No Car Approvals</h2>
+<div class="container-fluid px-3" ng-init="init()">
+    <div class="container-fluid text-center">
+        <div class="alert alert-warning">
+            <i class="fa fa-exclamation-triangle"></i> No Car Approvals
+        </div>
+    </div>
     
     <div class="row" ng-if="cars.length > 0">
-        <div class="col-md-6" ng-repeat="car in cars | orderBy:'-createdAt'">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mb-3" ng-repeat="car in cars | orderBy:'-createdAt'">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div uib-carousel active="activeSlide" interval="5000" no-wrap="false">
                         <div uib-slide ng-repeat="slide in car.vehicleImages track by $index" index="$index">
-                            <img ng-src="{{slide.url}}" class="carousel-image img-responsive center-block" style="height: 200px; object-fit: cover; border-radius: 8px;" alt="Car Image">
+                            <img ng-src="{{slide.url}}" class="img-fluid center-block" style="height: 200px; object-fit: cover; border-radius: 8px;" alt="Car Image">
                         </div>
                     </div>
                     
                     <h3 class="text-center">{{car.company}} {{ car.name }} ({{ car.modelYear }})</h3>
                     <p><strong>Price:</strong> ${{ car.price }}</p>
-                    <p><strong>Fuel Type</strong> {{car.fuelType}}</p>
+                    <p><strong>Fuel Type:</strong> {{ car.fuelType }}</p>
                     <p><strong>Category:</strong> {{ car.category }}</p>
                     <p><strong>Mileage:</strong> {{ car.mileage }} kmpl</p>
-                    
                     
                     <div class="well well-sm">
                         <strong>Owner:</strong> {{ car.owner.firstName }} {{ car.owner.lastName }}<br>
