--- a/frontend/src/components/auth/login.html
+++ b/frontend/src/components/auth/login.html
@@ -1,26 +1,34 @@
+<div class="container" ng-controller="appCtrl">
+    <div class="row" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
+        <div class="col-lg-4 col-md-6 col-sm-8 col-xs-10">
+            <form id="userForm" ng-controller="loginCtrl" class="panel panel-default shadow p-4 bg-white rounded">
+                <div class="panel-heading">
+                    <h2 class="text-center">Login Form</h2>
+                </div>
+                <div class="panel-body">
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" name="username" class="form-control"
+                            placeholder="Enter a valid username" ng-model="username" required>
+                        <span class="text-danger" ng-show="userForm.username.$error.required">
+                            Username is required.
+                        </span>
+                    </div>
 
-<div class="container" style="margin-left:450px; margin-top: 60px;"  ng-controller="appCtrl">
-    <div class="row justify-content-center">
-        <div class="col-md-4">
-            <form id="userForm" ng-controller="loginCtrl" class="well well-lg">
-                <h2 class="text-center">Login Form</h2>
-                <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" class="form-control" placeholder="Enter a valid username" ng-model="username" required>
-                    <span class="text-danger" ng-show="userForm.username.$error.required">
-                        Username is required.
-                    </span>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" ng-model="password" required>
-                </div>
-                
-                <button id="submit-button" type="submit" class="btn btn-success btn-block" ng-click="login()">Submit</button>
-                
-                <div class="text-center">
-                    <p>Not a user? <a ui-sref="signup">Signup</a></p>
-                    <p>Don't want to log in? <a ui-sref="home">Home</a></p>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" class="form-control"
+                            placeholder="Enter your password" ng-model="password" required>
+                    </div>
+
+                    <button id="submit-button" type="submit" class="btn btn-success btn-block" ng-click="login()">
+                        Submit
+                    </button>
+
+                    <div class="text-center" style="margin-top: 10px;">
+                        <p>Not a user? <a ui-sref="signup">Signup</a></p>
+                        <p>Don't want to log in? <a ui-sref="home">Home</a></p>
+                    </div>
                 </div>
             </form>
         </div>
