--- a/frontend/src/components/booking/userBookings/userBookings.html
+++ b/frontend/src/components/booking/userBookings/userBookings.html
@@ -1,28 +1,26 @@
 <head>
     <link rel="stylesheet" href="/frontend/src/components/booking/userBookings/userBookings.css">
 </head>
-<button style="margin-left: 20px;" ng-click="back()"><<<</button>
-<body ng-init="init()">
-    <div class="container">
-       
-        
-        <h1 class="text-center" ng-show="bookings.length > 0">Confirmed Bookings</h1>
-        <h1 class="text-center text-muted" ng-show="bookings.length === 0">No bookings scheduled</h1>
-        <br>
-        <div class="text-center" ng-show="bookings.length > 0">
-            <uib-pagination total-items="bookings.length" ng-model="page" items-per-page="5" max-size="5"
-                boundary-links="true" previous-text="&laquo;" next-text="&raquo;" class="pagination-sm">
-            </uib-pagination>
-        </div>
-        <div class="panel panel-default p-3">
-            <label for="sortBy" class="control-label">Sort By:</label>
-            <select id="sortBy" class="form-control" ng-model="sortBy"  ng-change="handleSorting()">
-                <option value="" disabled selected>Select Sorting Option</option>
-                <option value="amount">Price</option>
-                <option value="startDate">Start Date</option>
-            </select>
-        </div>
-       
+<button class="btn btn-secondary m-2" ng-click="back()"><<<</button>
+<div class="container-fluid">
+    <h1 class="text-center" ng-show="bookings.length > 0">Confirmed Bookings</h1>
+    <h1 class="text-center text-muted" ng-show="bookings.length === 0">No bookings scheduled</h1>
+    <br>
+    <div class="text-center" ng-show="bookings.length > 0">
+        <uib-pagination total-items="bookings.length" ng-model="page" items-per-page="5" max-size="5"
+            boundary-links="true" previous-text="&laquo;" next-text="&raquo;" class="pagination-sm">
+        </uib-pagination>
+    </div>
+    <div class="panel panel-default p-3">
+        <label for="sortBy" class="control-label">Sort By:</label>
+        <select id="sortBy" class="form-control" ng-model="sortBy" ng-change="handleSorting()">
+            <option value="" disabled selected>Select Sorting Option</option>
+            <option value="amount">Price</option>
+            <option value="startDate">Start Date</option>
+        </select>
+    </div>
+
+    <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover" ng-show="bookings.length > 0">
             <thead class="thead-dark">
                 <tr>
@@ -39,7 +37,7 @@
             <tbody>
                 <tr ng-repeat="booking in bookings">
                     <td>{{$index + 1}}</td>
-                    <td>{{booking._id}} 
+                    <td>{{booking._id}}</td>
                     <td><strong>${{calculateBookingPrice(booking.startDate, booking.endDate, booking.amount)}}</strong></td>
                     <td>{{booking.startDate | date: 'yyyy-MM-dd'}}</td>
                     <td>{{booking.endDate | date: 'yyyy-MM-dd'}}</td>
@@ -49,43 +47,48 @@
                         <p><strong>Email:</strong> {{booking.owner.email}}</p>
                     </td>
                     <td>
-                        <p><strong>Car Name:</strong>{{booking.vehicle.company}} {{booking.vehicle.name}}</p>
+                        <p><strong>Car Name:</strong> {{booking.vehicle.company}} {{booking.vehicle.name}}</p>
                         <p><strong>Model:</strong> {{booking.vehicle.modelYear}}</p>
                         <p><strong>Fuel Type:</strong> {{booking.vehicle.fuelType}}</p>
                         <p><strong>Price:</strong> ${{booking.vehicle.carPrice}}</p>
                         <p><strong>Category:</strong> {{booking.vehicle.category}}</p>
                         <p><strong>Mileage:</strong> {{booking.vehicle.mileage}} kmpl</p>
                     </td>
-                    <td ng-show="booking.ended && booking.status !== 'reviewed'">
-                        <button ng-click="openModal(booking)">Add review</button>
+                    <td ng-show="booking.status==='ended'">
+                        <button class="btn btn-primary btn-sm" ng-click="openModal(booking)">Add review</button>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <div class="reviewModal" ng-if="isModalOpen">
-            <!--modal for updating the user details-->
-            <div class="reviewModal-content" ng-hide="reviewed" >
-             <h2>Review This Car</h2>
-                <span class="close" ng-click="closeModal()">&times;</span>
-             <form ng-submit="addReview()" >
-                 <label for="review">Review:</label>
-                 <textarea id="review" ng-model="review.newReview" required placeholder="Write your review here..." rows="4"></textarea>
-                 <label for="rating">Rating:</label>
-                 <select id="rating" ng-model="review.rating" required>
-                     <option value="1">1 - Poor</option>
-                     <option value="2">2 - Fair</option>
-                     <option value="3">3 - Good</option>
-                     <option value="4">4 - Very Good</option>
-                     <option value="5">5 - Excellent</option>
-                 </select>
-         
-                 <button type="submit"> Add review</button>
-             </form>
-         </div>
-        
+    </div>
+
+    <div class="reviewModal" ng-if="isModalOpen">
+        <div class="reviewModal-content p-3" ng-hide="reviewed">
+            <h2 class="text-center">Review This Car</h2>
+            <span class="close" ng-click="closeModal()">&times;</span>
+            <form ng-submit="addReview()">
+                <div class="form-group">
+                    <label for="review">Review:</label>
+                    <textarea id="review" class="form-control" ng-model="review.newReview" required placeholder="Write your review here..." rows="4"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="rating">Rating:</label>
+                    <select id="rating" class="form-control" ng-model="review.rating" required>
+                        <option value="1">1 - Poor</option>
+                        <option value="2">2 - Fair</option>
+                        <option value="3">3 - Good</option>
+                        <option value="4">4 - Very Good</option>
+                        <option value="5">5 - Excellent</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-success btn-block mt-2">Add review</button>
+            </form>
         </div>
-        <div class="text-center">
-          <ul uib-pagination boundary-links="true" total-items="totalPages" ng-model="currentPage" ng-change="pageChanged()" items-per-page="itemsPerPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
-        </div>
-        </div>
-</body>
+    </div>
+
+    <div class="text-center mt-3" ng-click="pageChanged()" ng-if="hasMoreData">
+        <button id="load-more-btn" class="btn btn-primary">
+            Load More <span class="glyphicon glyphicon-chevron-down"></span>
+        </button>
+    </div>
+</div>
